<resources>
    <string name="app_name">MotionMeter</string>
    <string name="welcome_to_motion_meter_please_sign_in">Welcome to Motion Meter. Please Sign in.</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="preference_file_key">daclinkPreferenceFileNameMotionMeter</string>
    <string name="preference_userid_key">daclinkPreferenceUserIdKeyMotionMeter</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="folder_name">Folder name</string>
    <string name="records">Records</string>
    <string name="add_folder">Add folder</string>
    <string name="name">name</string>
</resources>